--- a/ejemplo-leaflet-basico.html
+++ b/ejemplo-leaflet-basico.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Mapa desarrollado con Leaflet</title>     
+    <title>Mapa desarrollado con Leaflet 01</title>     
     
     <!-- Hoja de estilos CSS de Leaflet -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
