--- a/ejemplo-leaflet-basico.html
+++ b/ejemplo-leaflet-basico.html
@@ -17,21 +17,10 @@
     <!-- Comentario -->
     Contenido de documento HTML 02
     
-<div id="mapid""></div>
-		
-<script>
+    <div id="mapid""></div>
 
-	var mymap = L.map('mapid').setView([51.505, -0.09], 13);
-
-	L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-		maxZoom: 18,
-		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
-			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-		id: 'mapbox/streets-v11',
-		tileSize: 512,
-		zoomOffset: -1
-	}).addTo(mymap);
-
-</script>	    
+    <!-- Código principal en JS -->
+    <script src="js/scripts.js"></script>	
+								    
 </body>
 </html>
