--- a/ejemplo-leaflet-basico.html
+++ b/ejemplo-leaflet-basico.html
@@ -15,12 +15,12 @@
 </head>
 <body>
     <!-- Comentario -->
-    Contenido de documento HTML 02
+    Contenido de documento HTML 03
     
     <div id="mapid""></div>
 
     <!-- Código principal en JS -->
-    <script src="js/scripts.js"></script>	
+    <script src="js/mapas.js"></script>	
 								    
 </body>
 </html>
