--- a/ejemplo-leaflet-basico.html
+++ b/ejemplo-leaflet-basico.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>    
 </head>
 <body>
-    <h1>Ejemplo de mapa desarrollado con Leaflet</h1>     
+    <h1>Ejemplo de mapa desarrollado con Leaflet 02</h1>     
     
     <div id="mapid" style="height: 200px;"></div>
 
@@ -30,7 +30,7 @@
 	L.marker([10.8164249, -85.3593949]).addTo(map);
 	    
 	// Controles
-	L.control.scale().addTo(map);
+	L.control.scale().addTo(mapa);
     </script>									    
 </body>
 </html>
