--- a/ejemplo-leaflet-basico.html
+++ b/ejemplo-leaflet-basico.html
@@ -13,10 +13,10 @@
 <body>
     <h1>Ejemplo de mapa desarrollado con Leaflet</h1>     
     
-    <!-- Elemento div para contener el mapa -->
+    <!-- Elemento div para contener el mapa Leaflet -->
     <div id="mapid" style="height: 500px; width: 500px;"></div>
 
-    <!-- Código principal de Leaflet -->
+    <!-- Código JavaScript para generar mapa Leaflet -->
     <script>
 	// Mapa Leaflet
 	var mapa = L.map('mapid').setView([10, -84], 7);
